--- a/src/App/DefaultBundle/Resources/views/Default/index.html.twig
+++ b/src/App/DefaultBundle/Resources/views/Default/index.html.twig
@@ -1,1 +1,5 @@
-Hello {{ name }}!
+{% extends 'AppDefaultBundle::layout.html.twig' %}
+
+{% block content %}
+    <h1>Hello Evercoder!</h1>
+{% endblock %}
