Make one bundle. Some other changes

--- a/src/App/Resources/views/Default/index.html.twig
+++ b/src/App/Resources/views/Default/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'AppDefaultBundle::layout.html.twig' %}
+{% extends 'App::layout.html.twig' %}
 
 {% block content %}
     <h1>Hello Evercoder!</h1>
