Removing bad idea

--- a/src/App/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/App/AppBundle/Resources/views/Default/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'App::layout.html.twig' %}
+{% extends 'AppBundle::layout.html.twig' %}
 
 {% block content %}
     <h1>Hello Evercoder!</h1>
